[gd_scene load_steps=7 format=3 uid="uid://4wdtwhly04em"]

[ext_resource type="Script" path="res://Assets/Scenes/Pickups/Coins/coin.gd" id="1_ajlj5"]
[ext_resource type="Texture2D" uid="uid://cduvcac1jppl3" path="res://Assets/Sprites/UI/Icons/coin.png" id="1_emhmd"]

[sub_resource type="Animation" id="Animation_8fj1j"]
resource_name = "appear"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.1, 0.1, 0.1)]
}

[sub_resource type="Animation" id="Animation_7ki3m"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.15, 0.15, 0.15), Vector3(0.02, 0.15, 0.15), Vector3(0.15, 0.15, 0.15)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ds2ja"]
_data = {
"appear": SubResource("Animation_8fj1j"),
"idle": SubResource("Animation_7ki3m")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_ejyns"]
radius = 0.721256

[node name="Coin" type="Node3D"]
script = ExtResource("1_ajlj5")

[node name="Sprite" type="Sprite3D" parent="."]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, 0, 0.378343, 0)
billboard = 2
texture = ExtResource("1_emhmd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "appear"
libraries = {
"": SubResource("AnimationLibrary_ds2ja")
}

[node name="TriggerArea" type="Area3D" parent="."]
monitorable = false

[node name="Collider" type="CollisionShape3D" parent="TriggerArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.386119, 0)
shape = SubResource("SphereShape3D_ejyns")

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 200.0
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="TriggerArea" to="." method="_on_trigger_area_body_entered"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
